istio/vs-route-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sa-external-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /static
    - uri:
        regex: '^.*\.(ico|png|jpg)$'
    route:
    - destination:
        host: sa-frontend
        port:
          number: 80
  - match:
    - uri:
        prefix: /sentiment
    route:
    - destination:
        host: sa-webapp
        port:
          number: 80
  - match:
    - uri:
        prefix: /feedback
    route:
    - destination:
        host: sa-feedback
        port:
          number: 80
